rabbit, delete WebApplication1.csproj

--- a/SampleTracking/SampleTracking.csproj
+++ b/SampleTracking/SampleTracking.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
   </ItemGroup>
 
 </Project>
